Fix unwanted white space on the right side of page

--- a/src/styles/solar_system.css
+++ b/src/styles/solar_system.css
@@ -4,7 +4,7 @@
   font-family: "Alien League Bold";
   font-size: 95px;
   letter-spacing: 20px;
-  width: 100%;
+  width: auto;
   position: absolute;
   z-index: 2;
   left: 600px;
